@@ -3,11 +3,12 @@ package holiday.controller;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 
@@ -32,10 +33,10 @@ public class PdfController {
 	@GetMapping("/downloadpdf")
 	    public void downloadPDFResource(HttpServletResponse response) {
 	        try {
-	            Path file = Paths.get(pdfService.generatePdf().getAbsolutePath());
+	            Path file = Path.of(pdfService.generatePdf().getAbsolutePath());
 	            if (Files.exists(file)) {
-	                response.setContentType("application/pdf");
-	                response.addHeader("Content-Disposition",
+	                response.setContentType(MediaType.APPLICATION_PDF_VALUE);
+	                response.addHeader(HttpHeaders.CONTENT_DISPOSITION,
 	                        "attachment; filename=" + file.getFileName());
 	                Files.copy(file, response.getOutputStream());
 	                response.getOutputStream().flush();
